docs: fix link coloring issue in dark mode (#2867)

--- a/website/src/pages/styles.module.css
+++ b/website/src/pages/styles.module.css
@@ -1,8 +1,3 @@
-a {
-  text-decoration: none;
-  color: #000;
-}
-
 .section {
   padding: 72px 0;
 }
